k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eduflex
  labels:
    name: eduflex
    environment: production
